lammps/test_compute/tmp.out
LAMMPS (29 Oct 2020)
Reading data file ...
  triclinic box = (0.0000000 0.0000000 0.0000000) to (100.00000 100.00000 100.00000) with tilt (0.0000000 0.0000000 0.0000000)
  1 by 1 by 1 MPI processor grid
  reading atoms ...
  4 atoms
  read_data CPU = 0.005 seconds
Reading potential file beta.txt with DATE: Sun
ERROR: Dump custom compute does not calculate per-atom vector (../dump_custom.cpp:1465)
Last command: dump 1 all custom 1 tmp.dump id type x y z fx fy fz c_1[0] c_1[1] c_1[2] c_1[3] c_1[4] c_1[5]
