lammps/test_compute/tmp.dump
ITEM: TIMESTEP
0
ITEM: NUMBER OF ATOMS
4
ITEM: BOX BOUNDS xy xz yz pp pp pp
0.0000000000000000e+00 1.0000000000000000e+02 0.0000000000000000e+00
0.0000000000000000e+00 1.0000000000000000e+02 0.0000000000000000e+00
0.0000000000000000e+00 1.0000000000000000e+02 0.0000000000000000e+00
ITEM: ATOMS id type x y z fx fy fz c_1[1] c_1[2] c_1[3] c_1[4] c_1[5] c_1[6]
1 1 0.0265474 0.683021 99.9358 0.341964 -0.0868614 0.10917 -1956.95 34787.8 -45618.9 30767.7 -4609.11 -72055.7
2 2 0.182227 99.5386 99.5744 -0.199607 -0.257339 0.290386 144525 -56361.7 -84860.8 -134398 -105493 107738
3 1 0.691963 99.8308 99.3567 -0.108181 0.519866 0.0348018 26723.7 -36284.6 2842.8 -279383 -18087.3 -2988.48
4 2 99.8242 0.074608 99.3074 -0.0341763 -0.175665 -0.434357 -15253.3 124627 -109234 -163996 -122186 123845
